finished initial build

--- a/index.html
+++ b/index.html
@@ -34,7 +34,19 @@
           </div>
           </div>
     </section>
+      <hr>
+    <footer>
+      <nav>
+        <li>Hillary Shannon Skye</li>
+        <li>720-218-6389</li>
+        <li>skyeinc@qwestoffice.net</li>
+        <a class="show" href="http://www.linkedin.com/in/hillaryskye"><i class="show fa fa-linkedin"></i></a>
+        <a class="github show" href="https://github.com/hillaryskye/">&nbsp;<i class="show fa fa-github"></i></a>
+        <a class="show" href="http://www.hillaryskye.com"><i class="show fa fa-bicycle">&nbsp;</i>hillaryskye.com</a>
+      </nav>
+      <nav class="title">Front-end Developer</nav>
    </main>
+    </footer>
     <div ng-view></div>
 
 <script src="/js/ang.js"></script>
