--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body ng-cloak>
 <!--   <main>
  -->    <div ng-controller="PortfolioCtrl">
-    <h1 class="welcome">Portfolio for Hillary Shannon Skye</h1>
+    <h1 class="welcome slide slide.ng-enter">Portfolio for Hillary Shannon Skye</h1>
 <!--     <nav>
   <a ng-href="home.html">Home</a>
   <a ng-href="about.html">About</a>
@@ -24,7 +24,6 @@
  -->
  <section class="module parallax parallax-1">
 <!--   <div class="container">
- -->    Hello from 1st pic
 <!--   </div>
  --></section>
 
