--- a/index.html
+++ b/index.html
@@ -7,21 +7,24 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.4/angular-route.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.4/angular-animate.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <link rel="stylesheet" href="/js/animate.css">
   <link href='https://fonts.googleapis.com/css?family=Raleway:400,500,300,200' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/stylesheets/style.css" />
-<!--   <base href="/">
+  <!--   <base href="/">
  -->  </head>
-<body ng-cloak>
-<!--   <main>
+  <body ng-cloak>
+  <!--   <main>
  -->    <div ng-controller="PortfolioCtrl">
-    <h1 class="welcome slide slide.ng-enter">Portfolio for Hillary Shannon Skye</h1>
-<!--     <nav>
-  <a ng-href="home.html">Home</a>
-  <a ng-href="about.html">About</a>
-  <a ng-href="contact.html">Contact</a>
-</nav>
- -->
+    <h1 class="welcome animated fadeInLeft">Portfolio for Hillary Shannon Skye</h1>
+
+<!--        <h2 class="animated hinge">Check it out!</h2>
+ --><!--   <nav>
+<a ng-href="home.html">Home</a>
+<a ng-href="about.html">About</a>
+<a ng-href="contact.html">Contact</a>
+</nav> -->
+
  <section class="module parallax parallax-1">
 <!--   <div class="container">
 <!--   </div>
@@ -30,7 +33,7 @@
      <section class="module content">
         <div class="container">
           <div class="project" ng-repeat="project in projects">
-          <h2>{{project.name}}</h2>
+          <h2 class="animated bounce" >{{project.name}}</h2>
           <div class="img">
             <img src="/images/{{project.name}}.png" alt="">
           </div>
@@ -55,10 +58,9 @@
       <nav class="title">Front-end Developer</nav>
 <!--    </main>
  -->    </footer>
-    <div ng-view></div>
-
-<script src="/js/ang.js"></script>
- <script src="/js/controllers.js"></script>
+    <div ng-view class="view"></div>
+    <script src="/js/ang.js"></script>
+    <script src="/js/controllers.js"></script>
 <!-- <script src="/js/routes.js"></script>
  --><!-- <script src="/js/filters.js"></script>
  -->
