--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.4/angular-animate.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <link rel="stylesheet" href="/js/animate.css">
+  <link href='https://fonts.googleapis.com/css?family=Playfair+Display+SC:400,700italic|Bad+Script' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Raleway:400,500,300,200' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/stylesheets/style.css" />
@@ -16,7 +17,7 @@
   <body ng-cloak>
   <!--   <main>
  -->    <div ng-controller="PortfolioCtrl">
-    <h1 class="welcome animated fadeInLeft">Portfolio for Hillary Shannon Skye</h1>
+    <h1 class="welcome animated fadeInLeft">Hillary Shannon Skye</h1>
 
 <!--        <h2 class="animated hinge">Check it out!</h2>
  --><!--   <nav>
