--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
       <nav>
         <li>Hillary Shannon Skye</li>
         <li>720-218-6389</li>
-        <li>hillary@hillaryskye.com</li>
+        <li>skyeinc9@gmail.com</li>
         <a class="show" href="http://www.linkedin.com/in/hillaryskye"><i class="show fa fa-linkedin"></i></a>
         <a class="github show" href="https://github.com/hillaryskye/">&nbsp;<i class="show fa fa-github"></i></a>
-        <a class="show" href="http://www.hillaryskye.com"><i class="show fa fa-bicycle">&nbsp;</i>hillaryskye.com</a>
+        <a class="show" href="https://whispering-dusk-7423.herokuapp.com/"><i class="show fa fa-bicycle">&nbsp;</i>Portfolio</a>
       </nav>
       <nav class="title">Front-end Developer</nav>
 <!--   </main>
