--- a/index.html
+++ b/index.html
@@ -61,21 +61,19 @@
 
      <section class="module content">
         <div class="container">
-          <div class="project" ng-repeat="project in projects">
-          <h2 class="animated bounce" >{{project.name}}</h2>
-          <div class="img">
-            <img src="/images/{{project.name}}.png" alt="">
-          </div>
-          <p class="desc">Description: {{project.desc}}</p>
-          <div class="href">
-            <a ng-href="{{project.url}}"><i class="{{project.icon}}"> </i>&nbsp;{{project.name}}</a>
-            <a ng-href="{{project.github}}"><i class="fa fa-github"></i></a>
-          </div>
+          <div class="project view-first" ng-repeat="project in projects">
+            <img class="img" src="/images/{{project.name}}.png" alt="">
+            <div class="mask">
+              <h2 class="animated bounce" >{{project.name}}</h2>
+              <p class="desc">Description: {{project.desc}}</p>
+              <div class="href">
+                <a ng-href="{{project.url}}"><i class="{{project.icon}}"> </i>&nbsp;{{project.name}}</a>
+                <a ng-href="{{project.github}}"><i class="fa fa-github"></i></a>
+              </div>
+            </div>
           </div>
         </div>
     </section>
-        <h5 class="footer right animated rollIn center">Thank you for stopping by!</h5>
-      <hr>
     <footer>
       <nav>
         <li>Hillary Shannon Skye</li>
