fixed responsive and project animations

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div class="project view-first" ng-repeat="project in projects">
             <img class="img" src="/images/{{project.name}}.png" alt="">
             <div class="mask">
-              <h2 class="animated bounce" >{{project.name}}</h2>
+              <h2>{{project.name}}</h2>
               <p class="desc">Description: {{project.desc}}</p>
               <div class="href">
                 <a ng-href="{{project.url}}"><i class="{{project.icon}}"> </i>&nbsp;{{project.name}}</a>
