added flexbox nav with responsive nav

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
    <div>
      <header>
-       <nav id="navbar">
+       <nav id="navbar" class="navigation">
          <a ng-href="/#/home">Home</a>
          <a ng-href="/#/details">App Details</a>
          <a ng-href="/#/design">Design Work</a>
