--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 
    <div>
      <header>
-       <nav id="navbar" class="navigation">
+       <div id="hamburger">
+			    <i class="fa fa-bars"></i>
+		  </div>
+       <nav id="navbar" class="navigation hide">
          <a ng-href="/#/home">Home</a>
          <a ng-href="/#/details">App Details</a>
          <a ng-href="/#/design">Design Work</a>
@@ -32,8 +35,9 @@
      </header>
 
     <div class="spacer"></div>
+  <nav>
 
-     <svg class="nav" viewBox="0 0 1000 250" version="1.1"
+     <svg class="logo" viewBox="0 0 1000 250" version="1.1"
       baseProfile="basic"
       width="100%" height="200"
       xmlns="http://www.w3.org/2000/svg">
@@ -59,6 +63,7 @@
           </textPath>
         </text>
     </svg>
+  </nav>
 
    <!-- <div class="welcome resize animated fadeInLeft svg-container">
 
