added skills page content

--- a/index.html
+++ b/index.html
@@ -148,10 +148,9 @@
     </footer>
   </main> -->
     <div ng-view class="view"></div>
-
     <script src="/js/ang.js"></script>
     <script src="/js/routes.js"></script>
     <script src="/js/controllers.js"></script>
-
+    <script src="/js/services.js"></script>
 </body>
 </html>
