Fixed moving Shannon rollercoaster and started building out Design Work Pages

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <li><a href="/#/details/mixer">Mixer</a></li>
               </ul>
             </li>
-           <li><a ng-href="/#/design">Design Work</a></li>
+           <li><a ng-href="/#/designs">Design Work</a></li>           
            <li><a ng-href="/#/skills">Skills</a></li>
            <li><a ng-href="/#/about">About</a></li>
            <li><a ng-href="/#/contact">Contact</a></li>
