--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="PortfolioApp">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=devicewidth, initial-scale=1, maximum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
  <title>Document</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.4/angular.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.4/angular-route.js"></script>
