added profile pic on navbar

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
      <header>
        <div id="hamburger" ng-click="hide = !true; ">
           <i class="fa fa-bars"></i>
-          <img src="/images/profile1.png" alt="profile pic">
 		  </div>
        <nav id="navbar" ng-click="hide = true" scroll-position="scroll" ng-class="{smaller: scroll > 50, big: scroll >=50}">
+        <img class="profile" src="/images/profile3.jpg" alt="profile pic">
         <ul ng-class="{hide: hide, smaller: scroll < 50, big: scroll >=50}">
              
            <li><a id="navbar1" ng-href="/#/home">Home</a></li>
@@ -50,7 +50,6 @@
      </div>
 
     <!-- <div class="spacer"></div> -->
-
 <!-- Small Logo for top left corner of each page -->
      <!--<svg class="logo" viewBox="0 0 1000 250" version="1.1"
       baseProfile="basic"
