--- a/index.html
+++ b/index.html
@@ -92,5 +92,8 @@
     <script src="/js/controllers.js"></script>
     <script src="/js/services.js"></script>
     <script src="/js/directives.js"></script>
+    <script src="/node_modules/bootstrap/dist/css/bootstrap.css"></script>
+    <script src="/node_modules//bootstrap/dist/js/bootstrap.js"></script>
+    <script src="node_modules/bootstrap/dist/css/bootstrap-theme.css"></script>
 </body>
 </html>
