--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
   <link href='https://fonts.googleapis.com/css?family=Raleway:400,500,300,200' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/js/animate.css">
+  <link href="/css/bootstrap.min.css" rel="stylesheet">
+
+  <link href="/css/bootstrap-theme.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/stylesheets/style.css" />
   <title>Document</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.4/angular.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.4/angular-route.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.4/angular-animate.min.js"></script>
   
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
+  
+  
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script> -->
   
   <!-- Latest compiled and minified CSS -->
@@ -92,8 +97,6 @@
     <script src="/js/controllers.js"></script>
     <script src="/js/services.js"></script>
     <script src="/js/directives.js"></script>
-    <script src="/node_modules/bootstrap/dist/css/bootstrap.css"></script>
-    <script src="/node_modules//bootstrap/dist/js/bootstrap.js"></script>
-    <script src="node_modules/bootstrap/dist/css/bootstrap-theme.css"></script>
+    <script src="/js/bootstrap.js"></script>
 </body>
 </html>
