--- a/index.html
+++ b/index.html
@@ -38,15 +38,14 @@
 </head>
   <body ng-cloak>
 
-   <!-- <div> -->
-     <header>
-       <div id="hamburger" ng-click="hiding = !true; ">
+     <header id="projectHeader" ng-class="{contents: hiding}">
+       <div id="hamburger" ng-click="hiding = !hiding">
           <i class="fa fa-bars"></i>
 		  </div>
-       <nav id="navbar" ng-click="hiding = true" scroll-position="scroll" ng-class="{smaller: scroll > 50, big: scroll >=50}">
+       <nav id="navbar" ng-click="hiding = true" scroll-position="scroll" ng-class="{smaller: scroll > 50, big: scroll >=50, header: hiding}">
         <img class="profile" src="/images/profile3.jpg" alt="profile pic">
         <ul ng-class="{hiding: hiding, smaller: scroll < 50, big: scroll >=50}">
-             {{hide}}
+             
            <li><a id="navbar1" ng-href="/#/home">Home</a></li>
            
              <li class="dropdown" ng-mouseover="show = true" ng-mouseleave="show = false"><a ng-href="/#/details">App Details<i class="fa fa-caret-down"></i></a>
@@ -65,34 +64,6 @@
        </ul>
        </nav>
      </header>
-     <!-- </div> -->
-
-    <!-- <div class="spacer"></div> -->
-<!-- Small Logo for top left corner of each page -->
-     <!--<svg class="logo" viewBox="0 0 1000 250" version="1.1"
-      baseProfile="basic"
-      width="100%" height="200"
-      xmlns="http://www.w3.org/2000/svg">
-
-        <rect width="100%" height="100%" fill="#af0a0a" />
-        <path id="my_path" d="M10 80 Q 52.5 10, 95 80 T 180 80" stroke="black" stroke-width="3" transform="translate(240,7) rotate(30)" fill="transparent"/>
-        <svg class="full" height="200">
-         <svg class="full" viewBox="0 -15 1000 200" class="ad">
-            <text y="150" x="500" font-size="150" x="50%" text-anchor="middle" fill="white">Hillary Skye</text>
-         </svg>
-        </svg>
-        <svg class="med" viewBox="0 -45 1000 200" class="ad">
-          <text y="100" x="500" font-size="150" x="50%" text-anchor="middle" fill="white">Hillary Skye</text>
-        </svg>
-        <svg class="small" viewBox="0 -45 1000 300" class="ad">
-          <text y="150" x="500" font-size="150" x="50%" text-anchor="middle" fill="white">Hillary Skye</text>
-        </svg>
-            <text font-size="25" fill="blue">
-          <textPath startOffset="0" xlink:href="#my_path">Shannon
-             <animate attributeName="startOffset" values="0;.5;1" dur="8s" repeatCount="indefinite" keyTimes="0;.5;1" />
-          </textPath>
-        </text>
-    </svg>-->
 
     <div ng-view class="view"></div>
     <script src="/js/ang.js"></script>
