making submenu clickable on mobile

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
              
            <li><a id="navbar1" ng-href="/#/home">Home</a></li>
            
-             <li class="dropdown" ng-mouseover="show = true" ng-mouseleave="show = false"><a ng-href="/#/details">App Details<i class="fa fa-caret-down"></i></a>
+             <li class="dropdown" ng-click="show = show" ng-mouseover="show = true" ng-mouseleave="show = false"><a ng-href="/#/details">App Details<i class="fa fa-caret-down"></i></a>
              <ul class="sub-menu" ng-class="{show: show}">
                 <li ng-class="{show: show}"><a id="navbar2" href="/#/details/publications">Publications App</a></li>
                 <li ng-class="{show: show}"><a id="navbar3" href="/#/details/shopping-angular">Shopping Angular</a></li>
