--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <a ng-href="/#/details">App Details
                   <i class="fa fa-caret-down"></i>
               </a>
-            </button>
+            </button class="nav-button">
              <ul class="sub-menu" ng-class="{show: show, active: active}">
                 <li ng-class="{show: show}"><a id="navbar2" href="/#/details/publications">Publications App</a></li>
                 <li ng-class="{show: show}"><a id="navbar3" href="/#/details/shopping-angular">Shopping Angular</a></li>
