--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
   <link href='https://fonts.googleapis.com/css?family=Raleway:400,500,300,200' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/js/animate.css">
+
+  <!-- Improve loading of pics early -->
+  <link rel="preload" as="image" href="/images/arrow-down.png"/>
+  <link rel="preload" as="image" href="/images/colorado-sunrise.jpg"/>
+  <link rel="preload" as="image" href="/images/mixer_opt.jpg"/>
+  <link rel="preload" as="image" href="/images/portfolioLogo12_opt_sm.jpg"/>
+  <link rel="preload" as="image" href="/images/profile3_opt.png"/>
+  <link rel="preload" as="image" href="/images/portfolioLogo22_opt.jpg"/>
+  <link rel="preload" as="image" href="/images/publications_opt_sm.jpg"/>
+  <link rel="preload" as="image" href="/images/reddit-firebase-angular_opt_sm.jpg"/>
+  <link rel="preload" as="image" href="/images/publications-api_opt_sm.jpg"/>
+  <link rel="preload" as="image" href="/images/shannon.svg"/>
+  <link rel="preload" as="image" href="/images/shopping-angular_opt_sm.jpg"/>
+  <link rel="preload" as="image" href="/images/tuneset_opt.jpg"/>
+  <link rel="preload" as="image" href="/images/wireframe21_opt_sm.jpg"/>
+  <link rel="preload" as="image" href="/images/wireframe31_opt.jpg"/>
   
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
@@ -35,7 +51,7 @@
           <i class="fa fa-bars"></i>
 		  </div>
        <nav id="navbar" ng-click="hiding = true" scroll-position="scroll" ng-class="{smaller: scroll > 50, big: scroll >=50, header: hiding}">
-        <img class="profile" src="/images/profile3.jpg" alt="profile pic">
+        <img class="profile" src="/images/profile3_opt.png" alt="profile pic">
         <ul ng-class="{smaller: scroll < 50, big: scroll >=50}">
              
            <li><a id="navbar1" ng-href="/#/home">Home</a></li>
